Completed navigation styling

--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,1 +1,29 @@
-// Navigation code here
+.nav-content {
+        width: 100%;
+        background: @wild-sand;
+        border-bottom: 1px solid @sea-shell;
+
+    nav {
+    width: 800px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: auto;
+
+    h1 {
+        font-size: 3rem;
+        padding: 10px;
+    }
+    .links {
+        display: flex;
+        justify-content: space-around;
+
+        a {
+            text-decoration: none;
+            font-size: 1.5rem;
+            padding: 20px;
+            color: @river-bend;
+        }
+    }
+}
+}
