--- a/less/home-page.less
+++ b/less/home-page.less
@@ -58,8 +58,10 @@
       }
 
       .btn {
-      }
-    }
+        .btn-style(@btn-bg-color, @porcelain);
+        }
+      
+    }//this closes walk
 
     .walk-img {
       width: 46%;
