--- a/less/navigation.less
+++ b/less/navigation.less
@@ -11,8 +11,9 @@
     margin: auto;
 
     h1 {
-        font-size: 3rem;
+        font-size: 4rem;
         padding: 10px;
+        color: @river-bend;
     }
     .links {
         display: flex;
