--- a/less/mixins.less
+++ b/less/mixins.less
@@ -1,1 +1,9 @@
-// Mixins Here
+.btn-style (@button-bg, @button-font) {
+    background: @button-bg;
+    color: @button-font;
+    border-radius: 5px;
+    font-size: 1.5rem;
+    width: 30%;
+    padding: 5px;
+    text-align: center;
+}
