--- a/css/index.css
+++ b/css/index.css
@@ -172,6 +172,11 @@ p {
   align-items: center;
   margin: auto;
 }
+@media (max-width: 500px) {
+  .nav-content nav {
+    width: 100%;
+  }
+}
 .nav-content nav h1 {
   font-size: 4rem;
   padding: 10px;
@@ -203,16 +208,36 @@ footer {
 .home .intro p {
   padding: 0 15px;
 }
+.home .intro img {
+  border-radius: 5px;
+}
 .home .space-images {
   display: flex;
   flex-wrap: wrap;
   width: 100%;
+}
+@media (max-width: 500px) {
+  .home .space-images .sky {
+    display: none;
+  }
+  .home .space-images .launch {
+    display: none;
+  }
 }
 .home .space-images img {
   width: 28%;
   margin: 20px 2.5%;
   border-radius: 20px;
   height: 100%;
+}
+@media (max-width: 500px) {
+  .home .space-images img {
+    width: 100%;
+    margin: 0;
+    padding: 0;
+    border-radius: 10px;
+    margin: 20px;
+  }
 }
 .home .visit-planets {
   padding: 15px;
@@ -230,8 +255,21 @@ footer {
   display: flex;
   justify-content: center;
 }
+@media (max-width: 500px) {
+  .home .walk {
+    margin-top: 20px;
+    padding: 10px;
+    flex-wrap: wrap;
+  }
+}
 .home .walk .walk-text {
   width: 50%;
+}
+@media (max-width: 500px) {
+  .home .walk .walk-text {
+    width: 100%;
+    order: 2;
+  }
 }
 .home .walk .walk-text h3 {
   margin-bottom: 10px;
@@ -244,7 +282,7 @@ footer {
   color: #F6F7F8;
   border-radius: 5px;
   font-size: 1.5rem;
-  width: 30%;
+  width: 25%;
   padding: 5px;
   text-align: center;
 }
@@ -252,12 +290,35 @@ footer {
   background: #F6F6F6;
   color: #23293B;
 }
+@media (max-width: 500px) {
+  .home .walk .walk-text .btn {
+    width: 100%;
+    padding: 20px;
+    font-size: 2rem;
+  }
+}
 .home .walk .walk-img {
   width: 46%;
   margin-left: 4%;
+}
+@media (max-width: 500px) {
+  .home .walk .walk-img {
+    width: 100%;
+    margin: 0;
+    padding: 0;
+    border-radius: 10px;
+    margin-bottom: 20px;
+  }
 }
 .home .walk .walk-img img {
   width: 100%;
   height: auto;
   border-radius: 10px;
+}
+@media (max-width: 500px) {
+  .home .walk .walk-img img {
+    order: 1;
+    margin: 10px;
+    width: 98%;
+  }
 }
