--- a/less/home-page.less
+++ b/less/home-page.less
@@ -11,19 +11,37 @@
     p {
       padding:0 15px;
     }
+    
+    img {
+      border-radius: 5px;
+    }
   
-  }
-
+  }//this closes .intro
+   
   .space-images {
     display: flex;
     flex-wrap: wrap;
     width: 100%;
+    
+    @media @phone {
+      .sky {
+        display: none;
+      }
+      .launch {
+          display: none; 
+      }
+    }//this closes the hidden images
 
     img {
       width: 28%;
       margin: 20px 2.5%;
       border-radius: 20px;
       height: 100%;
+
+      @media @phone {
+        .mobile-images;
+        margin: 20px;
+      }
     }
   }
 
@@ -46,8 +64,19 @@
     display: flex;
     justify-content: center;
 
+    @media @phone {
+      margin-top: 20px;
+      padding: 10px;
+      flex-wrap: wrap;
+    }
+
     .walk-text {
       width: 50%;
+
+      @media @phone {
+        width: 100%;
+        order: 2;
+      } 
 
       h3 {
         margin-bottom: 10px;
@@ -63,17 +92,37 @@
             background: @wild-sand;
             color: @ebony-clay;
           }//this closes hover effect
+
+          @media @phone {
+            width: 100%;
+            padding: 20px;
+            font-size: 2rem;
+          }
         }//this closes .bth
     }//this closes walk-text
 
     .walk-img {
       width: 46%;
       margin-left: 4%;
+
+      @media @phone {
+        .mobile-images;
+         margin-bottom: 20px;
+       
+      }
+
+
       
       img {
         width: 100%;
         height: auto;
         border-radius: 10px;
+        @media @phone {
+          order: 1;
+          margin:10px;
+          width: 98%;
+        
+        }
       }
     }
   }
