--- a/less/mixins.less
+++ b/less/mixins.less
@@ -3,7 +3,14 @@
     color: @button-font;
     border-radius: 5px;
     font-size: 1.5rem;
-    width: 30%;
+    width: 25%;
     padding: 5px;
     text-align: center;
+}
+
+.mobile-images () {
+    width: 100%;
+    margin: 0;
+    padding: 0;
+    border-radius: 10px;
 }
