--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,7 +1,7 @@
 .nav-content {
-        width: 100%;
-        background: @wild-sand;
-        border-bottom: 1px solid @sea-shell;
+    width: 100%;
+    background: @wild-sand;
+    border-bottom: 1px solid @sea-shell;
 
     nav {
     width: 800px;
@@ -9,6 +9,10 @@
     flex-direction: column;
     align-items: center;
     margin: auto;
+        
+        @media @phone {
+        width: 100%;
+        }
 
     h1 {
         font-size: 4rem;
